Fix css and add docker action

--- a/compose.yml
+++ b/compose.yml
@@ -3,3 +3,8 @@ services:
     build: .
     ports:
       - "2180:80"
+    develop:
+      watch:
+        - action: rebuild
+          path: ./
+          ignore: ./.github
